# homebase

./: .gitignore  .rgignore  ADMIRAL_STYLE.md  AGENTS.md  AI-MODELS-TIMELINE.md  CLAUDE.md  CODEBASE-ASSESSMENT.md  CODEBASE-REVIEW-2026-03-14.md  CODEBASE-REVIEW-2026-03-16.md  CODEBASE-REVIEW-ASSESSMENT.md  CODEBASE_ASSESSMENT.md  CODEBASE_RATING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PLAN2.md  README.md  REVIEW-critical-assessment-mar2026.md  SECURITY.md  TODO.md  admiral.md  admiral2.md  ai-fundamental-truths.md  ai-internet-acceleration.md  ai-investment-thesis.md  ai-theses-revisited.md  february_calendar_analysis.py  hinton-et-al-ai-pioneers.md  mona_lisa_render.ppm  plan.md  pokemon-ai-jobs-research.md  research-cutting-edge-usecases-mar-2026.md  research-llm-agents-feb-2026.md  research-llm-agents-mar-2026.md  research-top-agent-toolkits-feb-2026.md  research-top-agent-toolkits-mar-2026.md  sales-pitch-30min-guide.md  setup.sh
admiral/: AGENTS.md  CLAUDE.md  COMPETITIVE-ANALYSIS.md  IMPLEMENTATION_STATUS.md  LEVEL1_STATUS.md  LEVEL2_STATUS.md  MCP-SECURITY-ANALYSIS.md  SPEC-DEBT-NEXT-STEPS.md  STATUS.md  __init__.py  config.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
admiral/approval/: approval-api.ts
admiral/benchmarks/: hook_latency.sh  so_render_bench.sh
admiral/brain/: access-control.test.ts  access-control.ts  audit-logging.test.ts  audit-logging.ts  brain-excellence.test.ts  brain-excellence.ts  cross-project-sharing.test.ts  cross-project-sharing.ts  embedding-pipeline.test.ts  embedding-pipeline.ts  graduation.test.ts  graduation.ts  identity-tokens.test.ts  identity-tokens.ts  migration-testing.test.ts  migration.test.ts  migration.ts  multi-signal-retrieval.test.ts  multi-signal-retrieval.ts  postgres-schema.test.ts  postgres-schema.ts  schema.test.ts  schema.ts  self-instrumentation.test.ts  self-instrumentation.ts  sensitivity-classification.test.ts  sensitivity-classification.ts  similarity-search.test.ts  similarity-search.ts
admiral/config/: approved_mcp_servers.json  complexity_budgets.json  component_availability.json  component_versions.json  fleet_registry.json  model_tiers.json  pipeline_manifest.json  quality_weights.json  reference_constants.json  reference_constants.sh  review_rules.json  risk_profiles.json  spec_changelog_bridge.json  spec_version_manifest.json
admiral/context/: context-intelligence.test.ts  context-intelligence.ts  context-optimization.test.ts  context-optimization.ts  context-profile.test.ts  (+1 more)
aiStrat/: AGENTS.md  CAPITALIZATION-PLAN.md  CLAUDE.md  CRITIQUE.md  MANIFEST.md  QUICKSTART.md  REMEDIATION-PLAN.md  RESOLUTION-PLAN.md  REVIEW-2.md  REVIEW-3.md  REVIEW-4.md  REVIEW-PLAN.md  REVIEW-codebase-critical-assessment.md  REVIEW-v0.2.1-alpha.md  REVIEW-v4.md  REVIEW-v5.md  REVIEW.md  VERSION  pyproject.toml  sales-pitch-30min-guide.md  v0.2.0-alpha-architecture.md
(+1587 files in other folders)
