[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "admiral"
version = "0.2.0a0"
description = "Admiral Framework — Governance for Autonomous AI Agent Fleets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    "jsonschema>=4.20.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
brain-l2 = [
    "numpy>=1.26.0",
]
brain-l3 = [
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
]
mcp = [
    "mcp>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "phase1: Level 1 - Disciplined Solo",
    "phase2: Level 2 - Coordinated Pair",
    "phase3: Level 3 - Governed Fleet",
    "phase4: Level 4 - Full Framework",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["admiral*"]
