[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aistrat"
version = "0.4.0"
description = "AI Strategy Framework — Fleet Brain, Monitor, and Admiral"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]
openai = [
    "openai>=1.0",
]
monitor = [
    "feedparser>=6.0",
    "requests>=2.31",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "aistrat[postgres,openai,monitor,dev]",
]

[tool.pytest.ini_options]
testpaths = ["aiStrat/brain/tests", "aiStrat/monitor/tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
